Updated Terms and Rating System

--- a/app/views/websites/terms.html.erb
+++ b/app/views/websites/terms.html.erb
@@ -7,15 +7,18 @@
   <div class="row">
     <div class="col-xs-12 col-md-9">
       <h4>4/28/2018</h4>
-        <p>Our terms of service and privacy policy are based on the criteria set forth in the TOS Fairness Project Online User Bill Of Rights</p>
+        <h5>Our terms of service and privacy policy are based on the criteria set forth in the TOS Fairness Project Online User Bill Of Rights</h5>
 
-        <h5>Main Bullet Points</h5>
+        <h5>OUR EMAIL: info@breakdiving.org</h5>
+
+        <h5>The Bullet Points</h5>
+        <br>
           <ol>
-            <li><strong>The Right To Privacy:</strong> First, if you do not sign up, we do not collect any data about you at all except anonymous tracking data to determine which part of the world you are visiting from.  If you do sign up, we will NEVER sell, rent, or share any of your personal information with others without your express permission.  When you delete your account, we do not store any of your data on our servers.</li>
+            <li><strong>The Right To Privacy:</strong> First, if you do not sign up, we do not collect any data about you at all except anonymous tracking data to determine which part of the world you are visiting from.  If you do sign up, we will NEVER sell, rent, or share any of your personal information with others without your express permission.  If you sign up, your full name is never posted.  When you delete your account, we do not store any of your data on our servers.</li>
             <br>
-            <li><strong>The Right to Equal, Fair, &amp; Reasonable Expression:</strong> As a registered user, you can say anything here that you want, as long as you don't repeatedly use foul language.  Please express yourself in a mature way, without profanity, and don't make posts that belittle an individual, that may result in harm or self-harm, or that are not backed up with a story that justifies your ratings, i.e. instead of saying "This company sucks!" explain what they did that makes you feel that way, i.e. "They kicked me off simply because I expressed my opinion."</li>
+            <li><strong>The Right to Equal, Fair, &amp; Reasonable Expression:</strong> As a registered user, you can say anything here that you want in your public ratings, as long as you express yourself (using a reasonable person standard) in a mature way, without profanity, and don't make posts that belittle an individual or that may result in direct harm or direct self-harm to others.  Any user rating of a company's terms of service/privacy policy must be backed up with a story that justifies your rating, i.e. instead of saying "This company sucks!" please explain what the company did that makes you feel that way, i.e. "They kicked me off simply because I expressed my opinion."</li>
             <br>
-            <li><strong>The Right to Control My Intellectual Property:</strong> We don't own anything you post and never will. You simply give us a non-exclusive license to share what you wrote with others through this website.  That's it.  You can request to remove any content at any time by writing to us at info @ break diving dot org.</li>
+            <li><strong>The Right to Control My Intellectual Property:</strong> We don't own anything you post and never will. You simply give us a non-exclusive license to share what you wrote with others through publication of this website, and if news media, researchers, or other similar third parties want to quote or paraphrase what you wrote for research or reporting purposes, you give those particular third parties permission to do so.  That's it.  Remember that your full name is never shared in You can request to remove any content at any time by writing to us at info@breakdiving.org.</li>
             <br>
             <li><strong>The Right to Sue:</strong> You can sue us if you feel we violated these terms of service or this privacy policy.  Prior to any lawsuit, however, you agree  to first make a reasonable attempt to negotiate a remedy with us directly, and give us a reasonable opportunity to assist you.  If such negotiations fail to resolve the issue, you may file suit in a court of law.  In accordance with the TOS Fairness bill of rights you may file suit in any valid courthouse in any country in the world where venue would otherwise be proper, but until we make $250,000/year or more, you would have to pay for any flight costs, hotel fees, food costs, and additional legal fees for appearance in a court outside of New York State, Westchester County.  In all cases, New York Law will be used to determine the outcome of the case.  Further, if the court finds that your lawsuit is frivolous, you will reimburse us for all costs of defense, travel, lodging, food, etc. that we are forced to incur.</li>
             <br>
@@ -31,6 +34,18 @@
             <br> 
             <li><strong>The Right to Reasonable Terms:</strong> The above terms and privacy policy are designed to be simple, easy to understand, and above all, fair to you, the user.  We believe that they are.</li>
           </ol>
+
+          <h5>ARE YOU A USER OR SITE VISITOR?</h5>
+            <ul>
+              <li><b>ACCURACY:</b> We make a reasonable effort to ensure that each attorney or law student reviews each contract in a fair, impartial, objective, and accurate manner using the bill of rights and rating system to guide the ratings.  Only licensed attorneys, former attorney, and final year law students are accepted onto our rating team, and they each must have have strong familiarity with contracts.  However, to err is human, so while our intent is to be fully accurate with each rating, an oversight or inaccuracy may occasionally slip in unintentionally.  If this is the case, and you find such an oversight or inaccuracy, we ask that you state this in the user reviews section and also send us an email (see top) to help us improve.  We will review the perceived inaccuracy and if proven valid, we will update the review as soon as we can, based on staff availability.</li>
+              <li><b>NOT LEGAL ADVICE:</b> The reviews on this website are merely a public service. No reviews on this website are to be considered legal advice. Each review is merely one potential analysis. Remember that each 'Click to Agree' agreement is (in most jurisdictions) deemed to be a binding contract between you and the company. Therefore, before making any final decision on whether to sign any online agreement, if you are uncertain, please be sure to read the contract in full, and if you are still confused, consult a licensed attorney in your country or state.  Use of this website does not in any way create any lawyer-client relationship anywhere in the world.  Posting of reviews on this website is not deemed to be the practice of law in any jurisdiction because there is no specified client, and because the agreements are not being analyzed under the laws of any particular jurisdiction.  The lens through which we analyze these agreements is simple common sense and general fairness from the point of view of a standard user.  Therefore, these reviews should in all situations simply be considered the public posting of research.</li>
+            </ul>
+
+          <h5>ARE YOU A COMPANY?</h5>
+            <ul>
+              <li><b>FAIR REVIEW:</b> You have the right to a fair review based wholly on the objective criteria we have presented in our bill of rights and rating system.  We make every effort to ensure that personal feelings are kept out of the reviews, because each attorney, former attorney, or law student is entitled to share his or her personal use feelings as a regular user.</li>
+              <li><b>ADDRESSING INACCURACIES:</b> You have the right to address any perceived inaccuracies you feel we have posted about your company by sending an email to us (see top of agreement for our email address).  We will look at any information you present to us, and make a fair and timely effort based on our current staffing situation to determine if one of our reviewers was inaccurate.  We will make a reasonable effort to promptly update any information that we agree is inaccurate.</li>
+            </ul>
 
     </div>
     <div class="col-xs-12 col-md-3">
