--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
   <br />
     <h1 class="display-5 text-center">The Terms of Service Fairness Project</h1>
-    <h6 class="text-center">This Website's TOS Fairness Rating Score: 100 / 100</h6>
+    <h6 class="text-center">This Website's TOS Fairness Rating Score: 100 / 100.  Read more.</h6>
     <br>
     <div class="row">
       <div class="col-md-10 offset-md-1">
