Updated bill of rights

--- a/app/views/websites/bill_of_rights.html.erb
+++ b/app/views/websites/bill_of_rights.html.erb
@@ -4,7 +4,7 @@
 
   <h3>The TOS Fairness Project</h3>
   <h1>Online User Bill of Rights</h1>
-  <h4>Version 2.3 by TOS Fairness Volunteer Attorneys</h4>
+  <h4>Version 1.0 by TOS Fairness Volunteer Attorneys</h4>
 
   <p>Online users are the lifeblood of online companies.  Without the consumer, there would be no smartphones, no social media, no games, and no software.  Without the consumer, the company dies.</p>
 
@@ -31,11 +31,11 @@
 
     <!-- NUMBER FOUR -->
     <li><b>The Right to Sue</b> - I demand a right to sue at any time, subject to any statutes of limitations.</li>
-      <p>The right to raise a claim in a court of law is not something I should be forced to give up.  It is a right that I should be able to utilize, without question, and my recovery will not be limited to any particular dollar amount or restricted legal outcome.  Ideally, any lawsuit I choose to file should be permitted in a venue close to my home or business, regardless of where I am in the world, as long as jurisdiction would otherwise be proper; small companies that make less than $250,000 a year in gross income are exempt from this requirement. If my case is determined by a legitimate court of law to be undeniably frivolous, I will pay the reasonable legal and travel costs incurred by the defendant company.</p>
+      <p>The right to raise a claim in a court of law is not something I should be forced to give up.  It is a right that I should be able to utilize, without question, and my recovery will not be limited to any particular dollar amount or restricted legal outcome.  Ideally, any lawsuit I choose to file should be permitted in a venue close to my home or business, regardless of where I am in the world, as long as jurisdiction would otherwise be proper; small companies that make less than $250,000 a year in gross income are exempt from this requirement. Small companies may, however, allow lawsuits to be filed in any valid jurisdiction, in which case, I would be responsible for the company's reasonable economy flight costs, reasonable economy hotel fees, and reasonable additional legal fees expended for defendant's appearance in my home city.  If my case is determined by a legitimate court of law to be undeniably frivolous, I will reimburse all the reasonable costs incurred by the defendant company to defend the case.</p>
 
     <!-- NUMBER FIVE -->
     <li><b>The Right to Low-Cost Arbitration</b> - I demand a right to pursue low-cost arbitration.</li>
-      <p>Sometimes, resolution of a claim in a court of law is too expensive.  Therefore, I shall also have the right to utilize consumer arbitration (if I am a consumer) and/or pursue arbitration through any duly recognized arbitration organization, and my recovery will not be limited to any particular dollar amount or restricted legal outcome.  Ideally, any arbitration should be permitted in a venue close to my home or business, regardless of where I am in the world, as long as jurisdiction would otherwise be proper; small companies that make less than $250,000 a year in gross income are exempt from this requirement.  If my case is determined by the arbitrator to be undeniably frivolous, I will pay the reasonable legal and travel costs incurred by the defendant company.</p>
+      <p>Sometimes, resolution of a claim in a court of law is too expensive.  Therefore, I shall also have the right to utilize consumer arbitration (if I am a consumer) and/or pursue arbitration through any duly recognized arbitration organization, and my recovery will not be limited to any particular dollar amount or restricted legal outcome.  Ideally, any arbitration should be permitted in a venue close to my home or business, regardless of where I am in the world, as long as jurisdiction would otherwise be proper; small companies that make less than $250,000 a year in gross income are exempt from this requirement, but can allow arbitration by phone and/or email and/or regular mail.  Large companies may also offer this type of 'long-distance' arbitration.  If my case is determined by the arbitrator to be undeniably frivolous, I will pay all reasonable costs incurred by the defendant company to defend the case.</p>
 
     <!-- NUMBER SIX -->
     <li><b>The Right to Join a Class Action</b> - I demand a right to join any class action.</li>
@@ -57,6 +57,11 @@
     <li><b>The Right to Reasonable Terms</b> – Since online terms of service agreement are all considered “contracts of adhesion” in which I have no ability to negotiate, I demand that the overall terms of the agreement I must sign are deemed fair using a reasonable person standard.</li>
       <p>It is because of online users like me that companies with an online presence make money.  Therefore, the least such a company can do in appreciation of the customer is to offer fair terms that treat me respectfully and that recognize me as a valuable partner in your success.</p>
   </ol>
+
+  <h5>Recent Updates To This Bill of Rights</h5>
+    <ul>
+      <li>None so far</li>
+    </ul>
 
   
 
