--- a/app/views/websites/rating_system.html.erb
+++ b/app/views/websites/rating_system.html.erb
@@ -1,7 +1,7 @@
 <br><br>
 <div class="col-10 offset-1 col-sm-8 offset-sm-2 card form">
 
-  <h1>Our Rating System</h1>
+  <h1>Our Rating System - Last Updated 5/22/18</h1>
 
   <p>In order to help preserve each users bill of rights, and in order to provide each user with a clear idea of what he or she is signing, each contract terms of service reviewed on this site is given a rating, from 0 - 100, with 100 being the most fair.</p>
 
@@ -62,7 +62,13 @@
   <ul>
     <li><b>FAIR REVIEW:</b> You have the right to a fair review based wholly on the objective criteria we have presented in our bill of rights and rating system.  We make every effort to ensure that personal feelings are kept out of the reviews, because each attorney, former attorney, or law student is entitled to share his or her personal use feelings as a regular user.</li>
     <li><b>ADDRESSING INACCURACIES:</b> You have the right to address any perceived inaccuracies you feel we have posted about your company by sending an email to us (see top of agreement for our email address).  We will look at any information you present to us, and make a fair and timely effort based on our current staffing situation to determine if one of our reviewers was inaccurate.  We will make a reasonable effort to promptly update any information that we agree is inaccurate.</li>
+    <li><b>UPDATES TO BILL OF RIGHTS OR RATING SYSTEM:</b> We update the bill of rights and rating system whenever we feel it deserves such attention to improve our service to users worldwide.  Please check back on this page frequently to be notified of changes</li>
   </ul>
    <!-- ***IF THIS SECTION CHANGES ABOVE, ALSO UPDATE TERMS.HTML*** -->
+
+  <h5>RECENT CHANGES</h5>
+    <ul>
+      <li>None so far.</li>
+    </ul>
 
 </div>
