--- a/app/views/contract_revisions/_form.html.erb
+++ b/app/views/contract_revisions/_form.html.erb
@@ -123,7 +123,7 @@
       </div>
     </div>
     <div class="form-group row">
-      <%= f.label :rating_14, "Public Placement of TOS Rating Badge", :class => "col-6 col-form-label" %>
+      <%= f.label :rating_14, "Public Placement of TOS Fairness Score & Link", :class => "col-6 col-form-label" %>
       <div class="col-2">
         <%= f.select(:rating_14, ContractRevision::BADGES,{}, {class: 'form-control'}) %>
       </div>
