--- a/app/views/contract_revisions/show.html.erb
+++ b/app/views/contract_revisions/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container pt-4">
-  <div class="col-md-9">
+  <div class="col-md-12">
     <p class="h3"><%= @contract.company.company_name %> - <%= @contract.company.website %></p>
     <ul class="nav nav-tabs">
       <li class="nav-item">
@@ -20,27 +20,27 @@
           <tbody>
             <tr>
               <th scope="col">Contract Title</th>
-              <td><%= @contract.contract_title %></td>
+              <td class="info-score"><%= @contract.contract_title %></td>
             </tr>
             <tr>
               <th scope="col">Contract Website</th>
-              <td><%= @contract.website %></td>
+              <td class="info-score"><%= @contract.website %></td>
             </tr>
             <tr>
               <th scope="col">Contract Application</th>
-              <td><%= @contract.application %></td>
+              <td class="info-score"><%= @contract.application %></td>
             </tr>
             <tr>
               <th scope="col">Contract Type</th>
-              <td><%= @contract.contract_type %></td>
+              <td class="info-score"><%= @contract.contract_type %></td>
             </tr>
             <tr>
               <th scope="col">Contract Date</th>
-              <td><%= @contract_revision.contract_date.strftime('%m/%d/%Y') %></td>
+              <td class="info-score"><%= @contract_revision.contract_date.strftime('%m/%d/%Y') %></td>
             </tr>
             <tr>
               <th scope="col">TOS Website</th>
-              <td><%= @contract_revision.tos_url %></td>
+              <td class="info-score"><%= @contract_revision.tos_url %></td>
             </tr>
             <tr>
               <th scope="col">Total Rating</th>
@@ -48,7 +48,7 @@
             </tr>
             <tr>
               <th scope="col">Total Page Count</th>
-              <td><%= @contract_revision.total_page %></td>
+              <td class="info-score"><%= @contract_revision.total_page %></td>
               <% if !@contract_revision.total_page_note.nil? %>
                 <td>
                   <%= @contract_revision.total_page_note %>
@@ -160,7 +160,7 @@
               <td class="info-score"><%= @contract_revision.rating_13.round(2) %></td>
             </tr>
             <tr>
-              <th scope="col">Public Placement of TOS Rating Badge</th>
+              <th scope="col">Public Placement of TOS Fairness Score & Link</th>
               <td class="info-score"><%= @contract_revision.rating_14 %></td>
             </tr>
             <tr>
