--- a/app/views/contract_revisions/_form.html.erb
+++ b/app/views/contract_revisions/_form.html.erb
@@ -33,7 +33,7 @@
       </div>
     </div>
     <div class="form-group row">
-      <%= f.label :rating_1, "1. The Right to Privacy", :class => "col-md-4 col-sm-5 col-form-label" %>
+      <%= f.label :rating_1, "1. The Right to Privacy", :class => "col-4 col-form-label" %>
       <div class="col-2">
         <%= f.select(:rating_1, ContractRevision::SCORES, {}, {class: 'form-control'}) %>
       </div>
