--- a/app/views/contract_revisions/show.html.erb
+++ b/app/views/contract_revisions/show.html.erb
@@ -47,105 +47,139 @@
               <td class="info-score"><b><%= @contract_revision.total_rating.round(2) %></b></td>
             </tr>
             <tr>
+              <td><hr></td>
+            </tr>
+            <tr>
               <th scope="col">Total Page Count</th>
               <td class="info-score"><%= @contract_revision.total_page %></td>
               <% if !@contract_revision.total_page_note.nil? %>
-                <td>
-                  <%= @contract_revision.total_page_note %>
+                <td class="note">
+                  <%= simple_format @contract_revision.total_page_note %>
                 </td>
               <% end %>
+            </tr>
+            <tr>
+              <td><hr></td>
             </tr>
             <tr>
               <th scope="col">The Right to Privacy</th>
               <td class="info-score"><%= @contract_revision.rating_1 %></td>
               <% if !@contract_revision.rating_1_note.nil? %>
-                <td>
-                  <%= @contract_revision.rating_1_note %>
+                <td class="note">
+                  <%= simple_format @contract_revision.rating_1_note %>
                 </td>
               <% end %>
             </tr>
-          </tbody>
-          <tbody>
+            <tr>
+              <td><hr></td>
+            </tr>
             <tr>
               <th scope="col">The Right to Equal, Fair, & Reasonable Expression</th>
               <td class="info-score"><%= @contract_revision.rating_2 %></td>
               <% if !@contract_revision.rating_2_note.nil? %>
-                <td>
-                  <%= @contract_revision.rating_2_note %>
+                <td class="note">
+                  <%= simple_format @contract_revision.rating_2_note %>
                 </td>
               <% end %>
+            </tr>
+            <tr>
+              <td><hr></td>
             </tr>
             <tr>
               <th scope="col">The Right to Control My Intellectual Property</th>
               <td class="info-score"><%= @contract_revision.rating_3 %></td>
               <% if !@contract_revision.rating_3_note.nil? %>
-                <td>
-                  <%= @contract_revision.rating_3_note %>
+                <td class="note">
+                  <%= simple_format @contract_revision.rating_3_note %>
                 </td>
               <% end %>
+            </tr>
+            <tr>
+              <td><hr></td>
             </tr>
             <tr>
               <th scope="col">The Right to Sue</th>
               <td class="info-score"><%= @contract_revision.rating_4 %></td>
               <% if !@contract_revision.rating_4_note.nil? %>
-                <td>
-                  <%= @contract_revision.rating_4_note %>
+                <td class="note">
+                  <%= simple_format @contract_revision.rating_4_note %>
                 </td>
               <% end %>
+            </tr>
+            <tr>
+              <td><hr></td>
             </tr>
             <tr>
               <th scope="col">The Right to Low-Cost Arbitration</th>
               <td class="info-score"><%= @contract_revision.rating_5 %></td>
               <% if !@contract_revision.rating_5_note.nil? %>
-                <td>
-                  <%= @contract_revision.rating_5_note %>
+                <td class="note">
+                  <%= simple_format @contract_revision.rating_5_note %>
                 </td>
               <% end %>
+            </tr>
+            <tr>
+              <td><hr></td>
             </tr>
             <tr>
               <th scope="col">The Right to Join a Class Action</th>
               <td class="info-score"><%= @contract_revision.rating_6 %></td>
               <% if !@contract_revision.rating_6_note.nil? %>
-                <td>
-                  <%= @contract_revision.rating_6_note %>
+                <td class="note">
+                  <%= simple_format @contract_revision.rating_6_note %>
                 </td>
               <% end %>
+            </tr>
+            <tr>
+              <td><hr></td>
             </tr>
             <tr>
               <th scope="col">The Right to No Hidden Terms or Fees</th>
               <td class="info-score"><%= @contract_revision.rating_7 %></td>
               <% if !@contract_revision.rating_7_note.nil? %>
-                <td>
-                  <%= @contract_revision.rating_7_note %>
+                <td class="note">
+                  <%= simple_format @contract_revision.rating_7_note %>
                 </td>
               <% end %>
+            </tr>
+            <tr>
+              <td><hr></td>
             </tr>
             <tr>
               <th scope="col">The Right to Fair Process & To Be Heard</th>
               <td class="info-score"><%= @contract_revision.rating_8 %></td>
               <% if !@contract_revision.rating_8_note.nil? %>
-                <td>
-                  <%= @contract_revision.rating_8_note %>
+                <td class="note">
+                  <%= simple_format @contract_revision.rating_8_note %>
                 </td>
               <% end %>
+            </tr>
+            <tr>
+              <td><hr></td>
             </tr>
             <tr>
               <th scope="col">The Right to Appeal & The Right to Return</th>
               <td class="info-score"><%= @contract_revision.rating_9 %></td>
               <% if !@contract_revision.rating_9_note.nil? %>
-                <td>
-                  <%= @contract_revision.rating_9_note %>
+                <td class="note">
+                  <%= simple_format @contract_revision.rating_9_note %>
                 </td>
               <% end %>
+            </tr>
+            <tr>
+              <td><hr></td>
             </tr>
             <tr>
               <th scope="col">The Right to Reasonable Terms</th>
               <td class="info-score"><%= @contract_revision.rating_10 %></td>
               <% if !@contract_revision.rating_10_note.nil? %>
-                <td>
-                  <%= @contract_revision.rating_10_note %>
+                <td class="note">
+                  <%= simple_format @contract_revision.rating_10_note %>
                 </td>
               <% end %>
+            </tr>
+            <tr>
+              <td><hr></td>
             </tr>
             <tr>
               <th scope="col">Historical Fairness</th>
@@ -167,19 +201,17 @@
               <th scope="col">Total Rating</th>
               <td class="info-score"><%= @contract_revision.total_rating.round(2) %></td>
             </tr>
-          </tbody>
-          <tbody>
             <tr>
               <th scope="col">Additional Note</th>
-              <td><%= @contract_revision.additional_note %></td>
+              <td><%= simple_format @contract_revision.additional_note %></td>
             </tr>
             <tr>
               <th scope="col">Ways to improve</th>
-              <td><div><%= @contract_revision.ways_to_improve %></div></td>
+              <td><div><%= simple_format @contract_revision.ways_to_improve %></div></td>
             </tr>
             <tr>
               <th scope="col">Review Status</th>
-              <td><div><%= @contract_revision.status %></div></td>
+              <td class="info-score"><%= @contract_revision.status %></td>
             </tr>
           </tbody>
         </table>
