Defaulted dropdown to extended

--- a/app/views/contracts/index.html.erb
+++ b/app/views/contracts/index.html.erb
@@ -144,7 +144,7 @@
 
       $("#view-sm").show();
       //Reset small table's hidden rows
-      $(".dropdown-element").hide();
+      $(".dropdown-element").show();
     }
   }
   $(window).resize(resizeTables);
