--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,8 +6,10 @@
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
 
-    <p class="text-center">TOS Fairness Score: 100/100<br>
-    <a href="#" target="_blank">Read details in new window.</a></p>
+    <p class="text-center">TOS Fairness Score: 94/100<br>
+    <a href="https://www.tosfairness.org/contracts/21/contract_revisions/20" target="_blank">Read details in new window.</a></p>
+
+    <h3>Remember!  Your email address is the only method we have to identify you.  To ensure you don't get locked out of your account, please email us your full name, legal address, two cell phone numbers, two alternate email addresses, and five security questions and answers.  Yes, this is very low-tech, but we'll keep all the data private, and it will work until we update our site with the code that will do this for you.  Further, if you no longer have access to or change any of the above information, IMMEDIATELY TELL US, so that someone else who ends up porting your old phone number or using your old email address doesn't inadvertently gain access to your account.  This is a very serious issue!  We recommend you check in with us every year to ensure that the information we have on file for you is still up to date.</h3> 
 
     <p>If your browser says this connection is not secure, be sure that you are using https, and not http, when launching the site.</p>
 
