Adjusted about page; fixed broken tax info link

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,7 +7,7 @@
         <ul class="nav justify-content-end">
           <li class="nav-item"><a class="nav-link" href="/index.html">TOS Fairness</a></li>
           <li class="nav-item"><a class="nav-link" href="/terms.html">Terms &amp; Privacy</a></li>
-          <li class="nav-item"><a class="nav-link" href="/tax.html">Tax Info</a></li>
+          <li class="nav-item"><a class="nav-link" href="http://www.breakdiving.org/tax_document" target="_blank">Tax Info</a></li>
           <!-- <li class="nav-item"><a class="nav-link" href="#">FAQ</a></li> -->
           <li class="nav-item"><a class="nav-link" href="/about.html">Contact us</a></li>
           <li class="nav-item">
