Adds tax link to footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -103,7 +103,7 @@
             <div class='col-md-8 offset-md-2 col-sm-12'>
               <%= link_to 'TOS Fairness', root_path %>
               <%= link_to 'Terms & Privacy', terms_path %>
-              <%= link_to 'Tax Info', '#' %>
+              <%= link_to 'Tax Info', 'https://www.breakdiving.org/tax_document.html', :target => '_blank' %>
               <%= link_to 'Contact Us', about_path %>
             </div>
           </div>
