--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -53,9 +53,9 @@
       <%= f.submit "Update", :class => "btn btn-primary"  %>
     </div>
   <% end %>
-
-  <p>Unhappy?, cancel my account <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, :class => "btn btn-secondary" %></p>
-
+  <br />
+  <%= button_to "Unhappy? Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, :class => "btn btn-secondary" %>
+  <br />
   <%= link_to "Back", :back %>
 
 </div>
