Adjust team page text

--- a/app/views/websites/team.html.erb
+++ b/app/views/websites/team.html.erb
@@ -79,7 +79,7 @@
           <td>
             - <b>Monroe Mann</b><br/>
             - Project Manager &amp; Junior Developer (<a href="https://github.com/monroemann" target="_blank">Monroe's Github</a>)<br/>
-            - Dr. Monroe Mann, PhD, Esq, MBA, LLM, ME is the creator of TOSfairness, and is proud to not only be the project manager, but also a junior full stack developer on the project.  He is a practicing NY entertainment attorney, focusing on contracts and wills for artists and businesses, and an entertainer himself who hopes you will subscribe at youtube.com/monroemann.  Most importantly, he's an online user like you, who just got really sick of huge corporations taking advantage of him and his friends.<br/>
+            - Dr. Monroe Mann, PhD, Esq, MBA, LLM, ME is the creator of TOSfairness, and is proud to not only be the project manager, but also a junior full stack developer on the project.  He is a practicing NY entertainment attorney, focusing on contracts and wills for artists and businesses, and an entertainer himself who hopes you will subscribe to his <a href="youtube.com/monroemann">YouTube channel</a>.  Most importantly, he's an online user like you, who just got really sick of huge corporations taking advantage of him and his friends.<br/>
           </td>
         </tr>
         <tr>
@@ -100,7 +100,7 @@
           <td>
             - <b>Chris Van</b><br/>
             - Junior Developer (<a href="https://github.com/dynnog" target="_blank">Chris' Github</a>)<br/>
-            - Chris is a full-stack software engineer who is specialied on Ruby on Rails. He is the head design man for the team among many other things.<br/>
+            - Chris is a full-stack software engineer who specialized in Ruby on Rails. He is the lead design man for the team, among many other things.<br/>
           </td>
         </tr>
         <br />
